--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: rust
 rust:
     - nightly
 script:
-    - sudo apt-get install libasound2-dev
+    - sudo apt-get install libasound2-dev sdl2
     - cargo build --verbose --all
     - cargo test --verbose --all
