--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: rust
 rust:
     - nightly
 script:
-    - sudo apt-get install libasound2-dev sdl2
-    - cargo build --verbose --all
+    - sudo apt-get install libasound2-dev
+    - RUSTFLAGS="-C linker=x86_64-unknown-linux-gnu" cargo build --verbose --all
     - cargo test --verbose --all
