--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: rust
 rust:
     - nightly
 script:
+    - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
     - sudo apt-get install libasound2-dev libsdl2-dev
     - cargo build --verbose --all
     - cargo test --verbose --all
