--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rust:
 script:
     - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
     - sudo apt-get install libasound2-dev libsdl2-dev
-    - sudo apt-get install libc-dev
+    - sudo apt-get install libc6-dev
     - cargo build --verbose --all
     - cargo test --verbose --all
